--- a/src/views/quiz/show.twig
+++ b/src/views/quiz/show.twig
@@ -2,6 +2,7 @@
 {% block main_content %}
     <h1>{{quiz.name}}</h1>
     <p><strong>ID:</strong>{{quiz.id}}</p>
+    <p><strong>Weight:</strong>{{quiz.weight}}</p>
     <p><strong>Created:</strong>{{quiz.createdAt}}</p>
     <p><strong>Updated:</strong>{{quiz.updatedAt}}</p>
     <p>
