--- a/src/views/quiz/_form.twig
+++ b/src/views/quiz/_form.twig
@@ -5,9 +5,17 @@
 {% endif %}
     <div>
         <label for="name">Name: </label>
-        <input id="name" type="text" name="name" />
-        <label for="weight">Weight: </label>
-        <input id="weight" type="text" name="weight" />
+        {% if quiz %}
+            <label for="name">Name: </label>
+            <input id="name" type="text" name="name" value="{{quiz.name}}" />
+            <label for="weight">Weight: </label>
+            <input id="name" type="text" name="name" value="{{quiz.weight}}" /> 
+        {* else *}
+            <label for="name">Name: </label>
+            <input id="name" type="text" name="name" />
+            <label for="weight">Weight: </label>
+            <input id="weight" type="text" name="weight" />
+        {* endif *}
     </div>
     <input type="submit" value="Save Quiz" />
 </form>
