--- a/src/views/home/home.twig
+++ b/src/views/home/home.twig
@@ -1,4 +1,4 @@
 {% extends "/layouts/_default.twig" %}
 {% block main_content %}
-    <h1> {{quiz.name}}!</h1>
+    <h1> Welcome Home!</h1>
 {% endblock %}
